eingebunden. Somit kann der Style bereits schon während dem editieren geladen und angeschaut werden.
Wird diese Option deaktivert, wird der normale WYSIWYG Editor Style geladen.
- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)

Benutzerverwaltung
- Beim Erfassen eines neuen Benutzerkontos kann automatisch eine persönliche
  Kategorie beim Digital Asset Management Modul erstellt werden.
- Das Aktualisierungsintervall der Benutzersitzungen in der Datenbank
  kann definiert werden.
- Bei der Auflistung der Benutzer wird der Link 'zum Adressbuch hinzufügen'
  nur dann angezeigt, sofern der jeweilige Benutzer nicht bereits im Adressbuch
  enthalten ist.
- Für jede Benutzergruppe kann eine Homepage definiert werden, auf welche sich
  die dazugehörigen Benutzer nach erfolgreicher Authentifizierung laden
  sollen.
- Für jeden Benutzer kann eine primäre Benutzergruppe definiert werden.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

FCKEditor
- Neue Version 2.6.4.1

****************************************
* Behobene Fehler **********************
****************************************
Allgemein: